// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<style>
.IS1 {
  color: black;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 27px;
}
</style>

<div
  aria-level="3"
  className="bigOne tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</div>
`;

exports[`2. article summary strapline component 1`] = `
<style>
.IS1 {
  font-family: TimesModern-Regular;
  font-size: 22;
  line-height: 24;
  color: black;
  padding-bottom: 10px;
}
</style>

<div
  aria-level="4"
  className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</div>
`;
